Fix 'how to' steps, prep for binaries

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "main": "main.js",
   "dependencies": {
-    "steam-user": "^3.0.0"
+    "steam-user": "^3.0.0",
+    "electron": "^1.6"
   },
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "electron": "^1.6"
+  }
 }
