--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "dependencies": {
     "steam-user": "^3.0.0",
-    "electron": "^1.6"
+    "electron": "^1.6",
+    "username": "^3.0"
   },
   "license": "GPL-3.0",
   "devDependencies": {
