--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "name_change",
+  "name": "steam_profile_changer",
   "version": "0.0.1",
   "main": "main.js",
   "dependencies": {
-    "steam-user": "^3.0.0",
     "electron": "^1.6",
+    "steam-user": "^3.0.0",
     "username": "^3.0"
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^1.6"
+    "electron": "^1.6.11"
+  },
+  "repository" :
+  { "type" : "git",
+    "url" : "https://github.com/agentd00nut/steam_profile_changer.git"
   }
 }
